Remove z-index that was fixed upstream. Fixes #78

--- a/app/assets/stylesheets/spotlight/application.css
+++ b/app/assets/stylesheets/spotlight/application.css
@@ -13,7 +13,3 @@
  *= require_tree .
  */
 
-/* See projectblacklight/blacklight#719 */
-#search-navbar {
-  z-index: -1;
-}
